--- a/JsonNormalizer/JsonNormalizer.csproj
+++ b/JsonNormalizer/JsonNormalizer.csproj
@@ -5,4 +5,18 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="suggestions.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="suggestions.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
